--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			left: 0;
 			width: 100%;
 			height: 100vh;
-			background-image: url('/assets/bgImage-D3q-W1Xi.png');
+			background-image: url('assets/bgImage-D3q-W1Xi.png');
 			background-size: cover;
 			background-repeat: no-repeat;
 			background-position: center;
